# matrix

./: .gitignore  Cargo.toml  build
matrix-backend/: Cargo.toml
matrix-backend/src/: main.rs
matrix-frontend/: elm.json  index.html
matrix-frontend/src/: Matrix.elm
