[package]
name = "matrix-backend"
version = "0.1.0"
authors = ["Chris Donnelly <chris@donnelly.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
