[package]
name = "matrix-backend"
version = "0.1.0"
authors = ["Chris Donnelly <chris@donnelly.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13.1", features = ["hal"] }
adafruit-led-backpack = "0.1.0"
embedded-hal = "0.2"
ht16k33 = { version = "0.4", default-features = false }
